<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/title_profile" />

</menu>