<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.vk_android_vkat.ui.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.vk_android_vkat.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.vk_android_vkat.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.vk_android_vkat.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.vk_android_vkat.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.vk_android_vkat.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/routeDetailFragment"
        android:name="com.example.vk_android_vkat.route.RouteDetailFragment"
        android:label="Route Detail">
    <argument
        android:name="routeId"
        app:argType="long" />
    </fragment>

</navigation>